Fix for images getting stretched

--- a/web-server/plugins/slycat-parameter-image-plus-model/css/ui.css
+++ b/web-server/plugins/slycat-parameter-image-plus-model/css/ui.css
@@ -596,12 +596,8 @@ rights in this software.
   width: 100%;
   height: 100%;
   background-color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-#scatterplot-pane #image-preview.hidden {
   display: none;
+  text-align: center;
 }
 #scatterplot-pane #image-preview-image {
   max-height: 100%;
